--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,9 @@
 {
-    "name": "24slides/laravel-saml2",
+    "name": "patchx/laravel-saml2",
     "type": "library",
     "description": "SAML2 Service Provider integration to your Laravel 5.4+ application, based on OneLogin toolkit",
     "keywords": ["laravel", "saml", "saml2", "onelogin", "sso"],
-    "homepage": "https://github.com/24slides/laravel-saml2",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Artem Brezhnev",
-            "email": "brezzhnev@gmail.com"
-        }
-    ],
     "require": {
         "php": ">=7.1",
         "ext-openssl": "*",
