--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "illuminate/console": "~5.5|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "illuminate/database": "~5.5|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "illuminate/support": "~5.4|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
-        "patchx/php-saml": "dev-master",
+        "patchx/php-saml": "1.0.0",
         "ramsey/uuid": "^3.8|^4.0"
     },
     "require-dev": {
